Iteration 2 in C# Code implementiert
Die Operationen zur Verwaltung der aktuellen Zahl in einer EBC-Klasse
zusammengefasst.
Außerdem kleine Refaktorisierung: root flow in eigene Klasse
ausgelagert.

--- a/beispiele/taschenrechner/source csharp/taschenrechner.client/taschenrechner.client/taschenrechner.client.csproj
+++ b/beispiele/taschenrechner/source csharp/taschenrechner.client/taschenrechner.client/taschenrechner.client.csproj
@@ -46,8 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="flows\Root.cs" />
     <Compile Include="operationen\Akkumulator.cs" />
     <Compile Include="flows\Berechnen.cs" />
+    <Compile Include="operationen\Zahlenwerk.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="operationen\Rechenwerk.cs" />
