entsprechende Umsetzung von Iteration 2 in FSharp
So, Mittagspause/schlechtes Wetter sinnvoll verbracht:
ähnlich wie Ralf, habe ich mich entschieden die Eingabe der Ziffern in
ein eigenes Modul/Typ auszulagern.
Ich musste natürlich den Status-Typ umstellen, weil ja zusätzlich noch
der Eingabebuffer berücksichtigt werden muss - deshabl jetzt ein Record
statt ein Tupel (Lesbarkeit)

--- a/beispiele/taschenrechner/source fsharp/Taschenrechner.FsharpClient/Taschenrechner.FsharpClient/Taschenrechner.FsharpClient.fsproj
+++ b/beispiele/taschenrechner/source fsharp/Taschenrechner.FsharpClient/Taschenrechner.FsharpClient/Taschenrechner.FsharpClient.fsproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EingabeBuffer.fs" />
     <Compile Include="Taschenrechner.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
