reelle und negative Zahlen
mal als kleine Erweiterung die ich anrege:
letzter Stand war, dass der Rechner zwar "Kommazahlen" produzieren,
diese aber nicht eingeben konnte.
Deshalb habe ich mal zwei neue Tasten "," bzw. "+/-" eingefügt, die als
Ziffern verarbeitet werden.
Wir ihr seht war die Änderung an meiner Stelle minimal, wobei ich sogar
noch das "Rechenwerk" in ein Akkumulator-Modul ausgelagert habe.

PS: natürlich hat meine Lösung einen Schönheitsfehler:
2+3= gedrückt (ergibt 5) und dann die +/- Taste zeigt nich -5 an, weil
zu diesem Zeitpunkt der Eingabebuffer leer ist (die 5 ist noch im Akku,
nicht aber im Eingabebuffer) - Lösung wäre aus +/- eine Operation wie *
zu machen, aber ich denke zunächst ist es auch so ok

--- a/beispiele/taschenrechner/source fsharp/Taschenrechner.FsharpClient/Taschenrechner.FsharpClient/Taschenrechner.FsharpClient.fsproj
+++ b/beispiele/taschenrechner/source fsharp/Taschenrechner.FsharpClient/Taschenrechner.FsharpClient/Taschenrechner.FsharpClient.fsproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EingabeBuffer.fs" />
+    <Compile Include="Akkumulator.fs" />
     <Compile Include="Taschenrechner.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
